# python-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  pyproject.toml  to-implement.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  auth.md  bodies.md  errors.md  http.md  pipelines.md
src/dexpace/sdk/core/client/: asyncio_http_client.py  http_client.py  urllib_http_client.py
src/dexpace/sdk/core/errors/: __init__.py  http.py  streaming.py
src/dexpace/sdk/core/http/auth/: access_token.py  policies.py  token_cache.py
src/dexpace/sdk/core/http/common/: __init__.py  common_media_types.py  etag.py  headers.py  http_header_name.py  http_range.py  media_type.py  protocol.py  request_conditions.py  url.py
src/dexpace/sdk/core/http/context/: call_context.py  context_store.py  dispatch_context.py  exchange_context.py  request_context.py
src/dexpace/sdk/core/http/request/: __init__.py  file_request_body.py  loggable_request_body.py  method.py  multipart.py  request.py  request_body.py
src/dexpace/sdk/core/http/response/: __init__.py  async_response.py  loggable_response_body.py  response.py  response_body.py  status.py
src/dexpace/sdk/core/http/sse/: parser.py
src/dexpace/sdk/core/instrumentation/: __init__.py  client_logger.py  identifiers.py  instrumentation_context.py  log_level.py  noop.py  span.py  tracer.py  tracing_scope.py
src/dexpace/sdk/core/pipeline/policies/: _history.py  async_retry.py  logging_policy.py  retry.py  tracing_policy.py
src/dexpace/sdk/core/pipeline/step/: config.py  pipeline_step.py
src/dexpace/sdk/core/serde/: json_serde.py  serde.py
tests/: conftest.py
tests/auth/: test_credentials.py  test_policies.py
tests/client/: test_asyncio_http_client.py  test_urllib_http_client.py
tests/context/: test_promotion_chain.py
tests/errors/: test_hierarchy.py
tests/http/: test_etag.py  test_headers.py  test_http_range.py  test_media_type.py  test_method_status_protocol.py  test_multipart.py  test_request.py  test_request_body.py  test_request_conditions.py  test_response.py  test_response_body.py  test_url.py
tests/instrumentation/: test_logger.py
tests/pipeline/: test_async_pipeline.py  test_observability_policies.py  test_pipeline.py  test_retry.py  test_review_fixes.py  test_step_metadata.py
tests/serde/: test_json_serde.py
tests/sse/: test_parser.py
tools/: surface_baseline.json  surface_snapshot.py
