[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dexpace-sdk-core"
version = "0.1.0"
description = "Zero-dependency Python SDK core for building HTTP client libraries."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
authors = [{ name = "Omar Aljarrah", email = "o.mazari.om63@gmail.com" }]
keywords = ["sdk", "http", "client", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/dexpace/python-sdk"
Repository = "https://github.com/dexpace/python-sdk"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dexpace*"]
namespaces = true

[tool.setuptools.package-data]
"dexpace.sdk.core" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length — formatter owns this
    "B008",   # function call in argument defaults (dataclasses.field)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "RUF012"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
files = ["src/dexpace", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pytest_asyncio.*",
]
