[project]
name = "dexpace-sdk-workspace"
version = "0.0.0"
description = "Workspace root for the dexpace Python SDK packages (not published)."
requires-python = ">=3.12"
dependencies = [
    "dexpace-sdk-core",
    "dexpace-sdk-http-stdlib",
    "dexpace-sdk-http-aiohttp",
    "dexpace-sdk-http-httpx",
    "dexpace-sdk-http-requests",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
dexpace-sdk-core = { workspace = true }
dexpace-sdk-http-stdlib = { workspace = true }
dexpace-sdk-http-aiohttp = { workspace = true }
dexpace-sdk-http-httpx = { workspace = true }
dexpace-sdk-http-requests = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/dexpace-sdk-core/tests",
    "packages/dexpace-sdk-http-stdlib/tests",
    "packages/dexpace-sdk-http-aiohttp/tests",
    "packages/dexpace-sdk-http-httpx/tests",
    "packages/dexpace-sdk-http-requests/tests",
]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pytest_asyncio.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages/dexpace-sdk-core/src", "packages/dexpace-sdk-core/tests",
       "packages/dexpace-sdk-http-stdlib/src", "packages/dexpace-sdk-http-stdlib/tests",
       "packages/dexpace-sdk-http-aiohttp/src", "packages/dexpace-sdk-http-aiohttp/tests",
       "packages/dexpace-sdk-http-httpx/src", "packages/dexpace-sdk-http-httpx/tests",
       "packages/dexpace-sdk-http-requests/src", "packages/dexpace-sdk-http-requests/tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B011", "RUF012"]
# HttpTracer is an adapter-style base: every event method ships a no-op default
# so subclasses override only the events they consume. B024/B027 flag exactly
# that intentional pattern.
"**/instrumentation/http_tracer.py" = ["B024", "B027"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "packages/dexpace-sdk-core/src",
    "packages/dexpace-sdk-http-stdlib/src",
    "packages/dexpace-sdk-http-aiohttp/src",
    "packages/dexpace-sdk-http-httpx/src",
    "packages/dexpace-sdk-http-requests/src",
]
files = [
    "packages/dexpace-sdk-core/src",
    "packages/dexpace-sdk-core/tests",
    "packages/dexpace-sdk-http-stdlib/src",
    "packages/dexpace-sdk-http-stdlib/tests",
    "packages/dexpace-sdk-http-aiohttp/src",
    "packages/dexpace-sdk-http-aiohttp/tests",
    "packages/dexpace-sdk-http-httpx/src",
    "packages/dexpace-sdk-http-httpx/tests",
    "packages/dexpace-sdk-http-requests/src",
    "packages/dexpace-sdk-http-requests/tests",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "furl.*"
ignore_missing_imports = true
